# deepsea-ai

./: .gitignore  .mbaridoc.json  DEV.md  README.md  environment.yml  mkdocs.yml  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pytest.yml  release.yml
containers/cdk/: Dockerfile
containers/pip/: Dockerfile
deepsea_ai/: __init__.py  __main__.py  common_args.py  config.py
deepsea_ai/cdk/: DEV.md  Dockerfile  README.md  build_and_push_docker.sh  deploy.sh  destroy.sh
deepsea_ai/cdk/app/: cdk.json  config.yml  config1280.yml  config640.yml  package-lock.json  package.json  tsconfig.json
deepsea_ai/cdk/app/lib/: config.ts  ecs_task_autoscaling.ts
deepsea_ai/cdkpy/: app.py
deepsea_ai/commands/: bucket.py  cluster.py  config.py  ecsshutdown.py  monitor.py  monitor_utils.py  process.py  train.py  upload_tag.py
deepsea_ai/config/: __init__.py  config.ini  config.py  setup.py
deepsea_ai/database/: api.py  queries.py  report_generator.py
deepsea_ai/database/job/: database.py  database_helper.py  misc.py
deepsea_ai/database/tracks/: __init__.py  api.py
deepsea_ai/logger/: __init__.py  job_cache.py
deepsea_ai/pipeline/: __init__.py  run_deepsort.py  run_strongsort.py
deepsea_ai/tests/: test_deepsea_ai.py  test_monitor.py
docker/: build_docker.sh
docker/deepsea-ai/: Dockerfile
docker/ecs-autoscale/: Dockerfile  entrypoint.sh
docs/: CHANGELOG.md  aws_setup.md  aws_setup_advanced.md  config.md  data.md  iam_install.md  index.md  install.md
docs/commands/: ecsdeploy.md  ecsshutdown.md  monitor.md  process.md  train.md
docs/notebooks/: fathomnet_train.ipynb
tests/: run_tests.sh  test_commands_help.py  test_config.py  test_ecsprocess.py  test_ecsprocess_args.py  test_ecsprocess_args_dryrun.py  test_ecsprocess_dryrun.py  test_job_database.py  test_job_monitor.py  test_monitor.py  test_process.py  test_process_args.py  test_process_args_dryrun.py  test_process_dryrun.py
