[tool.poetry]
name = "deepsea-ai"
version = "1.14.0"
description = "DeepSeaAI is a Python package to simplify processing deep sea video in AWS from a command line."
authors = ["Danelle Cline <dcline@mbari.org>", "Duane Edgington <duane@mbari.org>"]
repository = "https://github.com/mbari-org/deepsea-ai"
readme = "README.md"
license = "GPL3"
classifiers = [
    'Development Status :: 1 - Planning',
    'Environment :: Console',
    'Environment :: Web Environment',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: GNU General Public License (GPL)',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Topic :: Scientific/Engineering :: Image Processing',
    'Topic :: Scientific/Engineering :: Artificial Intelligence'
]

[tool.poetry.scripts]
deepsea-ai = "deepsea_ai.__main__:cli"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[tool.poetry.dependencies]
python = "^3.7"
awscli = "^1.25.71"
click = "^8.0.0"
sagemaker = "^2.102.0"
boto3 = "^1.24.70"
requests = "^2.26.0"
tqdm = "^4.41.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
