[tool.poetry]
name = "deepsea-ai"
version = "1.24.2"
description = "DeepSeaAI is a Python package to simplify processing deep sea video in AWS from a command line."
authors = ["Danelle Cline <dcline@mbari.org>", "Duane Edgington <duane@mbari.org>"]
repository = "https://github.com/mbari-org/deepsea-ai"
readme = "README.md"
license = "Apache License 2.0 "
classifiers = [
    'Development Status :: 1 - Planning',
    'Environment :: Console',
    'Environment :: Web Environment',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Scientific/Engineering :: Image Recognition',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    "Topic :: Multimedia :: Video"
]

[tool.poetry.scripts]
deepsea-ai = "deepsea_ai.__main__:cli"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
click = "^8.0.0"
numpy ="^1.23.3"
requests = "^2.26.0"
tqdm = "^4.41.0"
boto3 = "^1.24.70"
awscli = "^1.25.71"
sagemaker = "^2.102.0"
pydantic-sqlalchemy = "^0.0.9"
sqlalchemy = "^1.4.26, <2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
